@@ -50,51 +50,63 @@ public class Token
 	 * literal (eg, Java mode uses this to mark true, false, etc)
 	 */
 	public static final byte LITERAL2 = 4;
-
+   
+   /**
+	 * Literal 3 token id. This can be used to mark an object
+	 * literal
+	 */
+	public static final byte LITERAL3 = 5;
+   
 	/**
 	 * Label token id. This can be used to mark labels
 	 * (eg, C mode uses this to mark ...: sequences)
 	 */
-	public static final byte LABEL = 5;
+	public static final byte LABEL = 6;
 
 	/**
 	 * Keyword 1 token id. This can be used to mark a
 	 * keyword. This should be used for general language
 	 * constructs.
 	 */
-	public static final byte KEYWORD1 = 6;
+	public static final byte KEYWORD1 = 7;
 
 	/**
 	 * Keyword 2 token id. This can be used to mark a
 	 * keyword. This should be used for preprocessor
 	 * commands, or variables.
 	 */
-	public static final byte KEYWORD2 = 7;
+	public static final byte KEYWORD2 = 8;
 
 	/**
 	 * Keyword 3 token id. This can be used to mark a
 	 * keyword. This should be used for data types.
 	 */
-	public static final byte KEYWORD3 = 8;
+	public static final byte KEYWORD3 = 9;
 
+   /**
+	 * Keyword 4 token id. This can be used to mark a
+	 * keyword. This should be used for data types.
+	 */
+	public static final byte KEYWORD4 = 10;
+   
 	/**
 	 * Operator token id. This can be used to mark an
 	 * operator. (eg, SQL mode marks +, -, etc with this
 	 * token type)
 	 */
-	public static final byte OPERATOR = 9;
+	public static final byte OPERATOR = 11;
 
 	/**
 	 * Invalid token id. This can be used to mark invalid
 	 * or incomplete tokens, so the user can easily spot
 	 * syntax errors.
 	 */
-	public static final byte INVALID = 10;
+	public static final byte INVALID = 12;
 
 	/**
 	 * The total number of defined token ids.
 	 */
-	public static final byte ID_COUNT = 11;
+	public static final byte ID_COUNT = 13;
 
 	/**
 	 * The first id that can be used for internal state
