@@ -1,3 +1,12 @@
+05/18/2005  Ian Lewis <IanLewis@member.fsf.org>
+
+    * Enhanced the syntax highlighting to support highlighting namespace
+      prefixes and markup.
+    * The source view now highlights ]]> in text as invalid because it is.
+    * Fixed bug that caused attribute values to be highlighted incorrectly if
+      the attribute had different types of quotes in it. Like
+      value="blah='test'"
+
 05/10/2005  Ian Lewis <IanLewis@member.fsf.org>
 
     * Added an options panel for the source view that allows you to specify
